--- a/sections/multisig.tex
+++ b/sections/multisig.tex
@@ -26,9 +26,9 @@ Let us now first formally define what a synchronized multi-signature scheme is.
 
 \begin{definition}[Aggregation Correctness with Rogue Keys and Signatures]
   Let $\msig$ be a synchronized $\rho$-wise multi-signature scheme for $2^\tau$ time periods.
-  $\msig$ has correct aggregations in the presence of rogue keys and signatures if for all security parameters $\secpar\in\NN$, number of aggregated signatures $\ell\in[\rho]$, time periods $t\in[2^\tau]$, messages $m\in\bin^*$, public keys $\pubkeys = (\pk^1,\dots,\pk^\ell)$ and signatures $\signatures = (\sigma^1,\dots,\sigma^\ell)$, such that for all $i\in[\ell]$, $\iverify(\params,\pk^i,t,m,\sigma^i) = 1$ it holds that
+  $\msig$ has correct aggregations in the presence of rogue keys and signatures if for all security parameters $\secpar\in\NN$, public parameters $\params\gets\setup(\secparam)$, number of aggregated signatures $\ell\in[\rho]$, time periods $t\in[2^\tau]$, messages $m\in\bin^*$, public keys $\pubkeys = (\pk^1,\dots,\pk^\ell)$ and signatures $\signatures = (\sigma^1,\dots,\sigma^\ell)$, such that for all $i\in[\ell]$, $\iverify(\params,\pk^i,t,m,\sigma^i) = 1$ it holds that
   \[
-  \Pr[\aggsig\gets\aggregate(\params,\pubkeys,t,m,\signatures): \verify(\params,\pubkeys,t,m,\aggsig)=1]=1-\negl
+  \Pr[\aggsig\gets\aggregate(\params,\pubkeys,t,m,\signatures): \averify(\params,\pubkeys,t,m,\aggsig)=1]=1-\negl
   \]
 \end{definition}
 
@@ -50,7 +50,7 @@ where $\queries$ denotes the set of signing queries made by $\adv$ and $\queries
 \end{definition}
 %\cmnt{TODO: change that ugly last line to something understandable}
 
-\begin{figure}[t]
+\begin{figure}[p]
 \centering
 \begin{pchstack}[center,boxed]
 \begin{pcvstack}
@@ -78,9 +78,9 @@ where $\queries$ denotes the set of signing queries made by $\adv$ and $\queries
     j := 0\\
     \pcdo[]\\
     \quad j:= j+1\\
-    \quad (w_0,\dots,w_{\abs{\pubkeys}}) := H(t,m,\pubkeys,j)\\
-    \quad \otsig := \sum_{i=1}^{\abs{\pubkeys}} w_i\cdot \otsig_i\\
-    \quad \vec{d} := \sum_{i=1}^{\abs{\pubkeys}} w_i\cdot \vec{d}_i\\
+    \quad (w^0,\dots,w^{\abs{\pubkeys}}) := H(t,m,\pubkeys,j)\\
+    \quad \otsig := \sum_{i=1}^{\abs{\pubkeys}} w^i\cdot \otsig^i\\
+    \quad \vec{d} := \sum_{i=1}^{\abs{\pubkeys}} w^i\cdot \vec{d}^i\\
     \pcwhile j < \chi \pcand \averify(\params,\pubkeys,t,m,(\otsig,d,j))=0\\
     \pcreturn \aggsig := (\otsig,d,j)
   }
@@ -102,8 +102,8 @@ where $\queries$ denotes the set of signing queries made by $\adv$ and $\queries
   }
   \pcvspace
   \procedure{$\averify(\params,\pubkeys,t,m,\aggsig)$}{
-    (w_0,\dots,w_{\abs{\pubkeys}}) := H(t,m,\pubkeys,j)\\
-    \vec{c} := \sum_{i=1}^{\abs{\pubkeys}} w_i\cdot \vec{c}_i\\
+    (w^0,\dots,w^{\abs{\pubkeys}}) := H(t,m,\pubkeys,j)\\
+    \vec{c} := \sum_{i=1}^{\abs{\pubkeys}} w^i\cdot \vec{c}_i\\
     \opk \gets \hvc.\sverify(\hvcparams,\vec{c},t,\vec{d})\\
     \pcif \abs{\pubkeys} > \rho \pcor \opk = \bot\\
     \quad \pcreturn 0\\
@@ -123,17 +123,18 @@ The following lemma will be useful for proving the security of our construction 
 Intuitively, the lemma shows that two valid aggregate signatures that are created using vectors of random weights that differ in one position, allow for extracting a valid one-time signature and key.
 
 \begin{lemma}\label{lem:forkingisuseful}
+  Let $\secparam,\tau,\rho$ be positive integers.
   Let $\params\gets\setup(\secparam)$ and $(\sk^*,\pk^*=\vec{c}^*) \gets\kgen(\params)$ be fixed.
-  Let $\ell\in[\rho]$, $t\in[2^\tau]$, $m\in\bin^*$, $\pubkeys = (\pk^0,\dots,\pk^{\ell})$ with $\pk^j=\pk^*$, $\aggsig^0=(\otsig^0,\vec{d}^0)$, $\aggsig^1=(\otsig^1,\vec{d}^1)$, and let $H_0,H_1$ be two random oracles, such that 
+  Let $\ell\in[\rho]$, $t\in[2^\tau]$, $m\in\bin^*$, $\pubkeys = (\pk^1,\dots,\pk^{\ell})$ with $\pk^j=\pk^*$, $\aggsig^0=(\otsig^0,\vec{d}^0)$, $\aggsig^1=(\otsig^1,\vec{d}^1)$, and let $H_0,H_1$ be two random oracles, such that 
   \begin{align*}
-    (w^1,\dots,w_{\ell}) &:= H_0(t,m,\pubkeys)\\
-    (w^1,\dots,w^{j-1},\hat{w}^j,w^{j+1},\dots,w_{\ell}) &:= H_1(t,m,\pubkeys)
+    (w^1,\dots,w^{\ell}) &:= H_0(t,m,\pubkeys)\\
+    (w^1,\dots,w^{j-1},\hat{w}^j,w^{j+1},\dots,w^{\ell}) &:= H_1(t,m,\pubkeys)
   \end{align*}
-  with $w_j\neq \hat{w}_j$ and
+  with $w^j\neq \hat{w}^j$ and
   \[
     \averify^{H_0}(\params,\pubkeys,t,m,\aggsig^0)=1 \quad \text{and} \quad \averify^{H_1}(\params,\pubkeys,t,m,\aggsig^1)=1.
   \]
-  Then, for $\opk^*\gets\hvc.\wverify(\hvcparams,(w_j-\hat{w}_j)\cdot \vec{c}^*\cdot,t,\vec{d}^0-\vec{d}^1)$ it holds that
+  Then, for $\opk^*\gets\hvc.\wverify(\hvcparams,(w^j-\hat{w}^j)\cdot \vec{c}^*,t,\vec{d}^0-\vec{d}^1)$ it holds that
   \[
     \opk^* \neq \bot \quad \text{and} \quad \hots.\wverify(\hotsparams,\opk^*,m,\otsig^0-\otsig^1) = 1.
   \]
@@ -150,7 +151,7 @@ Intuitively, the lemma shows that two valid aggregate signatures that are create
     \]
     and
     \[   
-      \hvc.\sverify(\hvcparams,\hat{w}^j\cdot \vec{c}^j+\smashoperator{\sum_{i\in[\ell]\setminus\{j\}}} w_i\cdot \vec{c}^i,t,\vec{d}^1)= \opk_1
+      \hvc.\sverify(\hvcparams,\hat{w}^j\cdot \vec{c}^j+\smashoperator{\sum_{i\in[\ell]\setminus\{j\}}} w^i\cdot \vec{c}^i,t,\vec{d}^1)= \opk_1
     \]
     for $\opk^0,\opk^1\neq\bot$.
     Thus by \autoref{def:malhomhvc} it holds that
@@ -169,13 +170,13 @@ Intuitively, the lemma shows that two valid aggregate signatures that are create
       =&\hots.\wverify(\hotsparams,\opk^0-\opk^1,m,\otsig^0-\otsig^1)=1 \tag*{\qed}
     \end{align*}
 \end{proof}
-
 The following theorem now states the security of our construction presented in~\autoref{fig:nidvconst}.
 
 \begin{theorem}\label{thm:mainconstruction}
 Let $\secpar,n,q,\varepsilon,\xi,\chi,\tau$ be positive integers with $n$ being a power of two, $q$ being prime, and $\chi \geq \secpar/(\varepsilon-1)$.
 Let $\ring_q$ be the polynomial ring $\ZZ_q[x]/\langle x^n+1\rangle$.
-Let $W \subseteq \ring_q$ be a set and let $W' := \{w^0-w^1| w^0,w^1 \in W\}$.
+Let $W \subseteq \ring_q$ be a set such that $|W| > 2^\secpar$ and let $W' := \{w^0-w^1| w^0,w^1 \in W\}$.
+Let $H : \bin^* \to W^\rho$ be a random oracle.
 Let $\hots$ be a key homomorphic one-time signature scheme with public keys in $\ring_q^\xi$ and let $\hvc$ be a homomorphic vector commitment for domain $\ring_q^\xi$.
 
 If $\hots$ is individually correct, $(\rho,W,\varepsilon)$-probabilistically homomorphic, robustly homomorphic, and $W'$-multi-user existentially unforgeable under rerandomized keys and $\hvc$ is individually correct, $(\rho,W,\varepsilon)$-probabilistically homomorphic, robustly homomorphic, and position-binding, then Chipmunk, as described in \autoref{fig:nidvconst}, is an unforgeable synchronized $\rho$-wise multi-signature scheme that is individually correct and has correct aggregations in the presence of rogue keys and signatures.
@@ -185,8 +186,8 @@ If $\hots$ is individually correct, $(\rho,W,\varepsilon)$-probabilistically hom
   The theorem follows immediatelly from \autoref{lem:msigindcorrect}, \autoref{lem:msigaggcorrect}, \autoref{lem:msigunf}.\qed
 \end{proof}
 
-\begin{lemma}
-  Let $\secpar,n,q,\varepsilon,\xi,\chi,\tau$ be positive integers with $n$ being a power of two, $q$ being prime.
+\begin{lemma}\label{lem:msigindcorrect}
+  Let $\secpar,n,q,\varepsilon,\xi,\chi,\rho,\tau$ be positive integers with $n$ being a power of two, $q$ being prime.
 Let $\ring_q$ be the polynomial ring $\ZZ_q[x]/\langle x^n+1\rangle$.
 Let $\hots$ be a key homomorphic one-time signature scheme with public keys in $\ring_q^\xi$ and let $\hvc$ be a homomorphic vector commitment for domain $\ring_q^\xi$.
 
@@ -194,7 +195,6 @@ If both $\hots$ and $\hvc$ are individually correct, then Chipmunk, as described
 \end{lemma}
 \begin{proof}
   Let $\params=(\hotsparams,\hvcparams)\gets\setup(\secparam)$, $(\sk,\pk) = ((\osks,\opks),\vec{c})\gets\kgen(\params)$, $t\in[2^\tau]$,$m\in\bin^*$, and $\sigma = (\otsig,\vec{d}) \gets \sign(\params,\sk,t,m)$.
-  
   By definition of the signing algorithm it holds that
   \[
     \otsig \gets \hots.\sign(\hotsparams,\osk^t,m) \quad \text{and} \quad \vec{d} \gets \hvc.\open(\hvcparams,\vec{c},\opks,t).
@@ -203,25 +203,71 @@ If both $\hots$ and $\hvc$ are individually correct, then Chipmunk, as described
   \[
     (\osk^t,\opk^t) \gets \hots.\kgen(\hotsparams)
   \]
+  From the individual correctness of $\hvc$ and the definition of the individual verification algorithm it follows that
+  \[
+    \opk^t = \opk \gets \hvc.\sverify(\params_\hvc,\vec{c},t,\vec{d})
+  \]
+  which finally implies by the individual correctness of $\hots$ that
+  \[
+    \hots.\sverify(\params_\hots,\opk,m,\otsig).
+  \]
+  Individual correctness thus follows.\qed
 \end{proof}
 
-The proof of the theorem is relatively long and technical.
-It essentially works by applying the forking lemma to extract two different aggregated signatures on which \autoref{lem:forkingisuseful} can then be applied.
-The result of that can then be leveraged to attack either the position binding of the homomorphic vector commitment or the unforgeability of the key-homomorphic one-time signature. We stress again that, due to the use of the forking lemma, this proof does \emph{not} apply to quantum adversaries.
+\begin{lemma}\label{lem:msigaggcorrect}
+  Let $\secpar,n,q,\varepsilon,\xi,\chi,\rho,\tau$ be positive integers with $n$ being a power of two, $q$ being prime and $\chi \geq \secpar/(\epsilon-1)$.
+Let $\ring_q$ be the polynomial ring $\ZZ_q[x]/\langle x^n+1\rangle$.
+Let $W \subseteq \ring_q$ be a set and let $W' := \{w^0-w^1| w^0,w^1 \in W\}$.
+Let $H : \bin^* \to W^\rho$ be a random oracle.
+Let $\hots$ be a key homomorphic one-time signature scheme with public keys in $\ring_q^\xi$ and let $\hvc$ be a homomorphic vector commitment for domain $\ring_q^\xi$.
+
+If both $\hots$ and $\hvc$ are $(\rho,W,\epsilon)$-probabilistically homomorphic, then Chipmunk, as described in \autoref{fig:nidvconst}, has correct aggregations in the presence of rogue keys and signatures.
+\end{lemma}
+\begin{proof}
+  Let $\params = (\params_\hvc,\params_\hots)\gets\setup(\secparam)$, $\ell \in [\rho]$, $t\in[2^\tau]$, $m\in\bin^*$ $\pubkeys = (\vec{c}^1,\dots,\vec{c}^\ell)$, and $\signatures = (\sigma^1,\dots,\sigma^\ell)$ with $\sigma^i=(\otsig,\vec{d})$, be arbitrary, such that for all $i\in[\ell]$, $\iverify(\params,\vec{c}^i,t,m,\sigma^i)$.
+  
+  The aggregation algorithm makes up to $\chi$ attempts to aggregate the signature and will only output an \emph{invalid} signature, if all $\chi$ attempts fail.
+  It thus suffices to analyse the probability with which all attempts fail.
+  
+  Attempt $j$ if performed by computing weights $(w^0,\dots,w^\ell) := H(t,m,\pubkeys,j)$ and computing 
+  \[
+    \otsig := \sum_{i=1}^{\abs{\pubkeys}} w^i\cdot \otsig_i \quad \text{and}\quad \vec{d} := \sum_{i=1}^{\abs{\pubkeys}} w^i\cdot \vec{d}_i.
+  \]
+  Let $\vec{c} = \sum_{i\in[\ell]}w^i\cdot\vec{c}^i$.
+  Since the signatures individually verify, there exists a well-defined $\opk^i := \hvc.\iverify(\params,\vec{c}^i,t,\vec{d}^i)$ for all $i\in[\ell]$.
+  Since further $H$ is a random oracle we can apply the $(\rho,W,\epsilon)$-probabilistic homomorphism of both $\hvc$ to conclude that
+  \[
+    \Pr\Bigl[\hvc.\sverify(\params_\hvc,\vec{c},t,\vec{d}) \neq \sum_{i\in[\ell]} w^i\cdot\opk^i\Bigr] < 2^{\-\epsilon}
+  \]
+  and
+  \[
+    \Pr\Bigl[\hots.\sverify\Bigl(\params_\hots,\sum_{i\in[\ell]} w^i\cdot\opk^i, m, \otsig\Bigr) = 0\Bigr] < 2^{\-\epsilon}.
+  \]
+  The aggregation attempt fails iff either of these conditions is violated.
+  Therefore, by a union bound, each individual attempt fails with probability at most $2^{-(\epsilon-1)}$.
+  Since each attempt is an independent Bernoulli trial the probability of overall failure of all $\chi\geq \secpar/(\epsilon-1)$ attempts can be bounded by $2^{-(\epsilon-1)\chi} \leq 2^{-\secpar}$.
+  Thus aggregation will succeed with overwhelming probability.\qed
+\end{proof}
+
+\begin{lemma}\label{lem:msigunf}
+  Let $\secpar,n,q,\varepsilon,\xi,\chi,\rho,\tau$ be positive integers with $n$ being a power of two, $q$ being prime.
+Let $\ring_q$ be the polynomial ring $\ZZ_q[x]/\langle x^n+1\rangle$.
+Let $W \subseteq \ring_q$ be a set such that $|W| > 2^\secpar$ and let $W' := \{w^0-w^1| w^0,w^1 \in W\}$.
+Let $H : \bin^* \to W^\rho$ be a random oracle.
+Let $\hots$ be a key homomorphic one-time signature scheme with public keys in $\ring_q^\xi$ and let $\hvc$ be a homomorphic vector commitment for domain $\ring_q^\xi$.
+
+If $\hots$ is $W'$-multi-user existentially unforgeable under rerandomized keys and $\hvc$ is position-binding, then Chipmunk, as described in \autoref{fig:nidvconst}, is unforgeable.
+\end{lemma}
 
 \begin{proof}
-  It is easy to verify, that the homomorphic correctness of the vector commitment and the one-time signature scheme imply that the scheme is correct.
-  
-  To prove unforgeability, let $\adv$ be an arbitrary PPT algorithm that makes at most $p=\poly$ queries to the random oracle and for which it holds that
-  \begin{align}
-    \Pr\left[\begin{aligned}\params\gets&\setup(\secparam,\rho,\tau);\\ (\sk^*,\pk^*)\gets&\kgen(\params);\\(\pubkeys^*,t^*,m^*,\aggsig^*)\gets&\adv^{\sign(\params,\sk^*,\cdot,\cdot)}(\params,\pk^*)\end{aligned}: 
-    \begin{aligned}
-      &\verify(\params,\pubkeys^*,t^*,m^*,\aggsig^*)=1\\
-  \land&\pk^*\in\pubkeys\land \nexists\; \sigma\;\ldotp\ (t^*,m^*,\sigma)\in\queries\\
-  \land&\forall t' \ldotp\;\abs{\queries_{t'}}\leq 1
-    \end{aligned}\right] = \epsilon(\secpar)
-  \end{align}
-  We assume without loss of generality that $\adv$ always queries $(\pubkeys^*,t^*,m^*)$ to the random oracle.
+  The proof for this lemma remains essentially identical to the proof of unforgeability for Squirrel~\cite{CCS:FleSimZha22}.
+  The entire argument is only concerned with the \emph{aggregated verification} algorithm, the unforgeability of $\hots$ and the position binding of $\hvc$.
+  None of the differences between Chipmunk and Squirrel affect these parts, with the tiny exception, that the random oracle during verification now takes the additional input $j$.
+  Literally the only necessary change in the proof is, therefore, that during the technically tedious forking lemma setup, the simulated random oracle needs to also take $j\in[\chi]$ as input.
+  As such we omit the proof here and refer the interested reader to the full version of the original Squirrel paper~\cite{EPRINT:FleSimZha22}. \qed
+  \iffalse
+  Let $\adv$ be an arbitrary PPT algorithm that makes at most $p=\poly$ queries to the random oracle and which breaks unforgeability with probability $\nu(\secpar)$
+  If $\adv$ outputs a forgery $(\pubkeys^*,t^*,m^*,\aggsig^*=(\otsig,\vec{d}^*,j^*))$, we assume without loss of generality that $\adv$ always queries $(\pubkeys^*,t^*,m^*,j^*)$ to the random oracle.
   
 %  Let $\IG$ be the algorithm that
 \begin{figure}\centering
@@ -233,35 +279,35 @@ The result of that can then be leveraged to attack either the position binding o
     \pcreturn ((\params,\pk^*),(\params,\sk^*))
   }
   \pcvspace
-  \procedure{$H(t,m,\pubkeys)$}{
-    \pcif ((t,m,\pubkeys),\vec{w}) \in \Hlist\\
+  \procedure{$H(t,m,\pubkeys,j)$}{
+    \pcif ((t,m,\pubkeys,j),\vec{w}) \in \Hlist\\
     \quad \pcreturn \vec{w}\\
     \pcparse \pubkeys \pcas (c_0,\dots,c_{\ell-1})\\
-    \vec{w} := (h_{i\rho},\dots,h_{i\rho+\ell-1})\\
-    \pcfor j \in [\ell-1]\\
-    \quad \pcif c_j = \pk^*\\
-    \quad\quad \vec{w} := \biggl(\begin{aligned}w_{0},\dots,w_{j-1},w_{\ell-1},\pclb w_{j+1},\dots,w_{\ell-2},w_{j}\end{aligned}\biggr)\\
+    \vec{w} := (h_{i\rho+1},\dots,h_{i\rho+\ell})\\
+    \pcfor j \in [\ell]\\
+    \quad \pcif \vec{c}_j = \pk^*\\
+    \quad\quad \vec{w} := \biggl(\begin{aligned}w^{0},\dots,w^{j-1},w^{\ell-1},\pclb w^{j+1},\dots,w^{\ell-2},w^{j}\end{aligned}\biggr)\\
     i := i+1\\
-    \Hlist := \Hlist \cup ((t,m,\pubkeys),\vec{w})\\
+    \Hlist := \Hlist \cup ((t,m,\pubkeys,j),\vec{w})\\
     \pcreturn \vec{w}
   }
   \end{pcvstack}
   \pchspace
-  \procedure{$\bdv^{\sign(\params,\sk^*,\cdot,\cdot)}(\params,c^*,h_0,\dots,h_{p\cdot\rho-1})$}{
+  \procedure{$\bdv^{\sign(\params,\sk^*,\cdot,\cdot)}(\params,c^*,h_1,\dots,h_{p\rho})$}{
     i := 0\\
     \Hlist := \emptyset\\
     (\pubkeys^*,t^*,m^*,\aggsig^*) \gets \adv^{\sign(\params,\sk^*,\cdot,\cdot),H(\cdot,\cdot,\cdot)}(\params,\pk^*)\\
-    \pcif \verify^{H(\cdot,\cdot,\cdot)}(\params,\pubkeys^*,t^*,m^*,\aggsig^*) = 0\\
+    \pcif \averify^{H(\cdot,\cdot,\cdot)}(\params,\pubkeys^*,t^*,m^*,\aggsig^*) = 0\\
     \quad \pcreturn (0,0,\bot)\\
-    \pcif \pk^*\not\in\pubkeys^*\pcor \exists\; \sigma\ldotp\ (t,m,\sigma)\in\queries\\
+    \pcif \pk^*\not\in\pubkeys^*\pcor \exists\; \sigma\ldotp\ (t^*,m^*,\sigma)\in\queries\\
     \quad \pcreturn (0,0,\bot)\\
-    \pcfor t' \in [2^\tau-1]\\
+    \pcfor t' \in [2^\tau]\\
     \quad\pcif \abs{\queries_{t'}}> 1\\
     \quad\quad \pcreturn (0,0,\bot)\\
-    \pcfor j \in [i-1]\\
-    \quad ((t_j,m_j,\pubkeys_j),\vec{w}_j) = \Hlist_j\\
-    \quad \pcif (t_j,m_j,\pubkeys_j) = (t^*,m^*,\pubkeys^*)\\
-    \quad\quad \pcreturn \biggl(1,j \rho+\abs{\pubkeys^*}-1,\biggl(\begin{aligned}\pubkeys^*,t^*,m^*,\pclb\aggsig^*,\vec{w}_j\end{aligned}\biggr)\biggr)\\
+    \pcfor k \in [i]\\
+    \quad ((t_k,m_k,\pubkeys_k,j_k),\vec{w}_k) = \Hlist_k\\
+    \quad \pcif (t_k,m_k,\pubkeys_k,j_k) = (t^*,m^*,\pubkeys^*,j^*)\\
+    \quad\quad \pcreturn \biggl(1,j \rho+\abs{\pubkeys^*},\biggl(\begin{aligned}\pubkeys^*,t^*,m^*,\pclb\aggsig^*,\vec{w}_j\end{aligned}\biggr)\biggr)\\
     \pcreturn (0,0,\bot)
   }
 \end{pchstack}
@@ -270,12 +316,12 @@ The result of that can then be leveraged to attack either the position binding o
 \end{figure}
 \begin{claim}\label{claim:bisasgoodasa}
   Let $\IG$ and $\bdv$ be as defined in \autoref{fig:fork}. Then it holds that
-  \[\Pr\left[\begin{aligned}((\params,\pk^*),(\params,\sk^*)) \gets \IG(\secparam);\\ h_0,\dots,h_{p-1}\gets W;\\ (b,i,%(\pubkeys,t,m,\aggsig,\vec{w})
-  \omega) \gets \bdv^{\sign(\params,)}(x,h_0,\dots,h_{p-1})\end{aligned} : b = 1\right] = \epsilon(\secpar).\]
+  \[\Pr\left[\begin{aligned}((\params,\pk^*),(\params,\sk^*)) \gets \IG(\secparam);\\ h_1,\dots,h_{p}\gets W;\\ (b,i,%(\pubkeys,t,m,\aggsig,\vec{w})
+  \omega) \gets \bdv^{\sign(\params,)}(x,h_1,\dots,h_{p})\end{aligned} : b = 1\right] = \epsilon(\secpar).\]
 \end{claim}
 \begin{proof}
   The input generation algorithm $\IG$ performs exactly the same setup expected by $\adv$ and then $\bdv$ simply executes $\adv$, perfectly simulating the random oracle by lazy sampling. The only interesting part of the simulation is the fact that $\bdv$ reorders the used randomness if a query includes the challenge public key $\pk^*$.
-  This is necessary to later make use of \autoref{lem:moregeneralforking} without modification, but does not impact the simulation at all: the random values $h_0$ through $h_{p\cdot\rho-1}$ are all distributed independently and the swapping takes place independently of their values. Therefore the distribution of the random oracle answers is identical with or without swapping.
+  This is necessary to later make use of \autoref{lem:moregeneralforking} without modification, but does not impact the simulation at all: the random values $h_0$ through $h_{p\cdot\rho}$ are all distributed independently and the swapping takes place independently of their values. Therefore the distribution of the random oracle answers is identical with or without swapping.
   After executing $\adv$, the algorithm $\bdv$ checks whether $\adv$ would have been successful according to \autoref{def:multisigunforge} and outputs $b=1$ iff $\adv$ was successful. Therefore, the claim follows. \qed
 \end{proof}
   
@@ -334,13 +380,13 @@ The result of that can then be leveraged to attack either the position binding o
     \hotsparams\gets\hots.\setup(\secparam)\\
     \params := (\hotsparams,\hvcparams,\tau)\\
     ((\osks^*,\opks^*),c^*) \gets \kgen(\params)\\
-    (b,\pubkeys,t,m,\aggsig^0,\vec{w}^0,\aggsig^1,\vec{w}^1)\gets\widetilde\fork_\bdv^{\sign(\params,(\osks^*,\opks^*),\cdot,\cdot)}(\params,c^*)\\
+    (b,\pubkeys,t,m,{\aggsig}_0,\vec{w}_0,{\aggsig}_1,\vec{w}_1)\gets\widetilde\fork_\bdv^{\sign(\params,(\osks^*,\opks^*),\cdot,\cdot)}(\params,c^*)\\
     \pcif b=1\\
-    \quad\pcparse \pubkeys \pcas (c_0,\dots,c_\ell)\\
-    \quad\pcparse \aggsig^0 \pcas (\sigma^0, d^0)\\
-    \quad\pcparse \aggsig^1 \pcas (\sigma^1, d^1)\\
-    \quad\pcfor j\in[\ell-1]\\
-    \quad\quad \pcif c_j = c^*\\
+    \quad\pcparse \pubkeys \pcas (\vec{c}^0,\dots,\vec{c}^\ell)\\
+    \quad\pcparse {\aggsig}_0 \pcas (\vec{\sigma}_0, \vec{d}_0)\\
+    \quad\pcparse {\aggsig}_1 \pcas (\vec{\sigma}_1, \vec{d}_1)\\
+    \quad\pcfor j\in[\ell]\\
+    \quad\quad \pcif c^j = c^*\\
     \quad\quad\quad \pcreturn (\widetilde w\cdot c^*,t,\widetilde w\cdot \open(\hvcparams,c^*,\opks^*,t),(d^0-d^1))\\
     \pcreturn \bot
   }}
@@ -351,10 +397,10 @@ The result of that can then be leveraged to attack either the position binding o
   \begin{align*}
     & \hvc.\wverify(\hvcparams,c,t,d_0)\\
 %    =& \hvc.\wverify(\hvcparams,\widetilde w\cdot c^*,t^0,\widetilde w\cdot\open(\hvcparams,c,\opks^*,t))\\
-    =& \hvc.\wverify(\hvcparams,w_j^0\cdot c^* - w_j^1\cdot c^*,t^0,w_j^0\cdot\open(\hvcparams,c,\opks^*,t) - w_j^0\cdot\open(\hvcparams,c,\opks^*,t))\\
-    =& \hvc.\sverify(\hvcparams,w_j^0\cdot c^*,t^0,w_j^0\cdot\open(\hvcparams,c,\opks^*,t))\\ &- \hvc.\sverify(\hvcparams,w_j^1\cdot c^*,t^0,w_j^1\cdot\open(\hvcparams,c,\opks^*,t))
+    =& \hvc.\wverify(\hvcparams,w^j_0\cdot c^* - w^j_1\cdot c^*,t,w^j_0\cdot\open(\hvcparams,c,\opks^*,t) - w^j_0\cdot\open(\hvcparams,c,\opks^*,t))\\
+    =& \hvc.\sverify(\hvcparams,w^j_0\cdot c^*,t^0,w^j_0\cdot\open(\hvcparams,c,\opks^*,t))\\ &- \hvc.\sverify(\hvcparams,w^j_1\cdot c^*,t^0,w^j_1\cdot\open(\hvcparams,c,\opks^*,t))
     \tag{Robust Homomorphism}\\
-    =& w_j^0\cdot \opk^*_t - w_j^1\cdot \opk^*_t = \widetilde w\cdot \opk^*_t \tag{Homomorphic correctness}
+    =& w^j_0\cdot \opk^*_t - w^j_1\cdot \opk^*_t = \widetilde w\cdot \opk^*_t \tag{Homomorphic correctness}
   \end{align*}
   and
   \[
@@ -398,7 +444,7 @@ The result of that can then be leveraged to attack either the position binding o
     \right]\label{eq:redhvc}
   \end{align}
   where \autoref{eq:redhvcsimcorrect} follows because the inputs $\rdv_0$ provides to the forking algorithm are distributed identically to those sampled by $\IG$.
-  \autoref{eq:redhvcm0notbot} follows because by the above observation $(w_j^0-w_j^1)\cdot\opk^*_t$ cannot be $\bot$.
+  \autoref{eq:redhvcm0notbot} follows because by the above observation $(w^j_0-w^j_1)\cdot\opk^*_t$ cannot be $\bot$.
   Finally \autoref{eq:redhvc} follows from \autoref{lem:forkingisuseful} and the fact that the forking algorithm only outputs $b=1$ if both multi-signatures verify.
   
   Since the homomorphic vector commitment is assumed to be position binding, it thus follows that
@@ -522,5 +568,6 @@ Since $\hots$ is assumed to be multi-user existentially unforgeable under rerand
     \epsilon \leq \frac{p}{\abs{\tern_\alpha}} + \sqrt{p\cdot\negl}
   \]
   which implies that $\epsilon$ is negligible and concludes the proof.\qed
+  \fi
 \end{proof}
 
