working on technical overview

--- a/extraref.bib
+++ b/extraref.bib
@@ -13,6 +13,15 @@
   doi =          "10.1017/CBO9781107359949.008",
 }
 
+@misc{BonKim2020,
+  title  = "One-Time and Interactive Aggregate Signatures from Lattices",
+  author = "Dan Boneh and 
+            Sam Kim",
+  year   = 2020,
+  howpublished = "\url{https://crypto.stanford.edu/~skim13/agg_ots.pdf}"
+}
+
+
 @inproceedings{Shor94,
   title={Algorithms for quantum computation: discrete logarithms and factoring},
   author={Shor, Peter W},
