--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -12,7 +12,7 @@ It was shown by Shor~\cite{Shor94} that the discrete logarithm problem can be so
 
 Luckily, not all computational hardness assumptions are created equal and some seem to remain hard in the presence of quantum adversaries. 
 Building multi-signatures from computational hardness assumptions that withstand quantum adversaries is both a theoretically and practically important question.
-While it may not be clear, when practically relevant quantum computers will appear, it is important to have secure alternatives for important cryptographic primitives, when the time comes.
+While it may not be clear when practically relevant quantum computers will appear, it is important to have secure alternatives for important cryptographic primitives, when the time comes.
 
 One class of cryptographic hardness assumptions that seems to be particularly resilient against quantum adversaries is lattice-based cryptography.
 Two of the three post-quantum signature schemes that were standardized by NIST in 2022 base their security on hardness assumptions related to lattices and, not surprisingly, there has also been significant interest in constructing multi-signatures from lattice hardness assumptions~\cite{CANS:ElBStu16,FukHas19,MaJia19,PenDu20,AFRICACRYPT:KanDut20,PROVSEC:FukHas20,PKC:DOTT21,C:BosTakTib22, CCS:FleSimZha22}.
