--- a/extraref.bib
+++ b/extraref.bib
@@ -107,3 +107,25 @@
   biburl       = {https://dblp.org/rec/journals/jmc/AlbrechtPS15.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@misc{BonKim2020,
+  title  = "One-Time and Interactive Aggregate Signatures from Lattices",
+  author = "Dan Boneh and 
+            Sam Kim",
+  year   = 2020,
+  howpublished = "\url{https://crypto.stanford.edu/~skim13/agg_ots.pdf}"
+}
+
+@article{Mic07,
+  author    = "Daniele Micciancio",
+  title     = "Generalized Compact Knapsacks, Cyclic Lattices, and Efficient One-Way Functions",
+  year      = 2007,
+  month     = dec,
+  publisher = "Birkh{\"a}user Verlag",
+  volume    = 16,
+  number    = 4,
+  issn      = "1016-3328",
+  doi       = "10.1007/s00037-007-0234-9",
+  journal   = "{computatinal complexity}",
+  pages     = "365--411",
+}
