--- a/sections/benchmarks.tex
+++ b/sections/benchmarks.tex
@@ -69,7 +69,7 @@
   \caption{Parameter sets for Chipmunk}
 \end{table}
 
-The exact constraints to derive the parameters is summarized in Table \ref{tab:constraints}.
+The exact constraints to derive the parameters is summarized in \autoref{tab:constraints}.
 Table \ref{tab:param} summarizes the results from the script. 
 We ran a script \footnote{\label{fn:github}\url{TBD}}
 that enumerates all possible 
