--- a/sections/prelim.tex
+++ b/sections/prelim.tex
@@ -4,3 +4,7 @@
 \[\zip(\vec{a},\vec{b}) := \begin{pmatrix}(a_1,b_1)\\
 \vdots\\
 (a_\ell,b_\ell) \end{pmatrix}\]
+
+\begin{lemma}[\cite{Mic07}]\label{lem:ternbound}
+  Let $a,b\in\ring$ be two polynomials. Then $\norm{b\cdot a} \leq \norm{a}_1\cdot\norm{b}$.
+\end{lemma}
