--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -44,9 +44,9 @@ We formally ensure that successfully verifying individual signatures will be suc
 
 On the practical side, our scheme Chipmunk produces smaller individual and aggregated signatures, when compared to Squirrel.
 In terms of computational efficiency, Chipmunk either outperforms Squirrel or remains comparable in speed.
-Even for our smallest benchmarking parameters, using keys that can generate $2^{21}$ signature, i.e. allow for signing every 10 seconds for slightly over half a year, Chipmunk's individual and aggregate signatures are smaller by a factor of $1.4\times$ and $4.8\times$ respectively, when compared to Squirrel.
+Even for our smallest benchmarking parameters, using keys that can generate $2^{21}$ signature, i.e. allow for signing every 10 seconds for slightly over half a year, Chipmunk's individual and aggregate signatures are smaller by a factor of $1.4\times$ and $4.8\times$, respectively, compared to Squirrel.
 An individual Chipmunk signatures is $32$ KB and aggregating $8192$ signatures results in an aggregate signature that is $160$ KB large.
-The gap between Chipmunk's and Squirrel's performance increases with an increasing bound on the number of signatures that should issuable with a single key.
+The gap between Chipmunk's and Squirrel's performance increases with increasing the bound on the number of signatures that are issuable with a single key.
 
 One of Squirrel's main computational bottlenecks was key generation as generating keys that support $2^{21}$ and $2^{26}$ signatures took $4$ minutes and $2$ hours.
 Chipmunk's key generation times are smaller for these parameters by factors of $9 \times$ and $30 \times$.
