homomorphic -> key-homomorphic

--- a/sections/onetimesig.tex
+++ b/sections/onetimesig.tex
@@ -4,7 +4,7 @@
 
 In this section, we define and instantiate the notion of a key-homomorphic one-time signature scheme that we will need in our final construction.
 Intuitively, a one-time signature is unforgeable as long as at most one signature for some message is published under a given public key.
-We call such a scheme homomorphic, if the a linear combination of separate signatures for the same message verifies under the linear combination of the corresponding public keys, while still being unforgeable.
+We call such a scheme key-homomorphic, if the a linear combination of separate signatures for the same message verifies under the linear combination of the corresponding public keys, while still being unforgeable.
 We present a construction of this primitive, which is similar to previous one-time signature schemes by Boneh and Kim~\cite{BonKim2020} and Lyubashevsky and Micciancio~\cite{TCC:LyuMic08}.
 
 \begin{definition}[One-Time Signature]\label{def:hots}
