--- a/sections/veccom.tex
+++ b/sections/veccom.tex
@@ -103,7 +103,7 @@ We then show that the decomposition function has nice homomorphic properties.
     \proj_q : \ring^{\lceil\log_{2\eta+1} q\rceil} \to \ring_q,\quad \proj_q(\vec{b}) = \smashoperator{\sum_{j=1}^{\lceil\log_{2\eta+1} q\rceil}} b_j\cdot(2\eta+1)^{j-1}.
   \]
 \end{definition}
-
+%
 The following two simple lemmas effectively state that the projection function is the inverse of the decomposition function and that the projection function is $\ring_q$-linear.
 \begin{lemma}\label{lem:projinvofbin}
   For all primes $q$ and $a = \sum_{i=1}^{n} a_i\cdot x^{i-1} \in\ring_q$, it holds that $\proj_q(\decomp_q(a))=a$.
@@ -131,7 +131,7 @@ The following two simple lemmas effectively state that the projection function i
   \end{align*}
   \qed
 \end{proof}
-
+%
 For the sake of readability we will at times abuse notation slightly and apply $\decomp_q$ to \emph{vectors} of $\ring_q$ elements, which is to be understood as the componentwise application of $\decomp_q$ with subsequent concatenation of the resulting vectors.
 Similarly, $\proj_j$ may be applied to vectors of a length that is a \emph{multiple} of $\lceil\log_{2\eta+1} q\rceil$ to result in a vector of $\ring_q$ elements.
 The above lemmas generalize to this extension.
@@ -256,7 +256,7 @@ By design the range of $\decomp_q$ and $\decomp_{q'}$ are sets of vectors of pol
 \begin{proof}
 Let $\params \gets \setup(\secparam)$, $\vec{c}^i = \vec{p}_0^i \in \ring_q^{\lceil\log_{2\eta+1} q\rceil}$, $t\in[2^\tau]$, $\vec{d}^i = (\vec{p}^i_1,\dots,\vec{p}^i_{\tau},\vec{s}^i_1, \dots, \vec{s}^i_{\tau},\vec{u})^\intercal\in (\ring^{\lceil\log_{2\eta+1} q\rceil})^{2\tau} \times \ring^{\xi\lceil\log_{2\eta+1} q'\rceil}$ with $\iverify(\params,\vec{c}^i,t,\vec{d}^i) = \vec{m}_t^i \neq \bot$
 as specified in \autoref{def:hvc}.
-
+%
 We first note that even for arbitrary $w^1,\dots,w^{\ell}\in\tern_{\alpha_w}$ it holds for all $j\in[\tau]$ that
 \begin{align*}
   \proj_q\Bigl(\sum_{i=1}^{\ell}w^i\cdot\vec{p}_{j-1}^i\Bigr) ={}&\sum_{i=1}^{\ell}w^i\cdot\proj_q(\vec{p}_{j-1}^i)\tag{\autoref{lem:projislin}}\\
@@ -318,6 +318,9 @@ Therefore it only remains to verify that the norm-checks go through with suffici
   Then the construction from \autoref{fig:hvcinst} is a robustly homomorphic HVC.
 \end{lemma}
 \begin{proof}
+The proof of this lemma is taken almost verbatim from \cite{CCS:FleSimZha22}.
+It deviates only insofar as the full construction and proof was split in two in \cite{CCS:FleSimZha22}, whereas is is combined here.
+Since the proof is short, we include it here for the sake of completeness.
 Let $\vec{c}^0,\vec{c}^1 \in \ring_q^\comlen$, and $\vec{d}^0, \vec{d}^1 \in \ring_q^\oplen$, and $t\in[2^\tau]$ be arbitrary, such that
 \begin{equation}
     \sverify(\params,\vec{c}^0, t,\vec{d}^0)=\vec{m}^0 \quad \text{and} \quad \sverify(\params,\vec{c}^1, t,\vec{d}^1)=\vec{m}^1\label{eq:outputofsverify}
@@ -379,6 +382,7 @@ and $j \in [\tau]$ that the following two conditions hold
   If the $\sis_{\ring,q,2\lceil \log_{2\eta+1} q \rceil,4\bagg}$ problem and the $\sis_{\ring,q,\xi\lceil \log_{2\eta+1} q' \rceil,4\bagg}$ problem are hard, then the construction from \autoref{fig:hvcinst} is position binding.
 \end{lemma}
 \begin{proof}
+This proof once again follows very closely the proof shown in \cite{CCS:FleSimZha22}.
 We will prove this lemma by leveraging that any pair of valid decommitments for different messages will lead to a collision somewhere in the generalized hash tree, which can be turned into a solution for one of the SIS instances. 
 
   Let $\adv$ be an arbitrary PPT adversary against the position binding property of the construction.
