--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,7 @@
 %\usepackage[most]{tcolorbox}
 \usepackage[adversary,sets,asymptotics,landau,lambda,operators,logic]{cryptocode}
 \usepackage{subcaption}
+\usepackage{tablefootnote}
 \allowdisplaybreaks
 \makeatletter
 \let\claim\relax % undefine the environment
