--- a/sections/benchmarks.tex
+++ b/sections/benchmarks.tex
@@ -1,82 +1,29 @@
 \section{Benchmarks}\label{sec:benchmarks}
 \subsection{Parameters and security estimations}
-
-% ┌──────────┬───────┬────────┬───────────┬───────────┬───────────┬─────────┬───────┬─────────┬──────────────┬──────────┬───────┬─────────────┬─────────┬─────────────┐
-% │   secpar │   tau │    rho │   epsilon │   alpha_w │   alpha_H │   delta │   phi │   gamma │   beta_sigma │   q_kots │   eta │   beta_open │   q_hvc │ size        │
-% ├──────────┼───────┼────────┼───────────┼───────────┼───────────┼─────────┼───────┼─────────┼──────────────┼──────────┼───────┼─────────────┼─────────┼─────────────┤
-% │      112 │    21 │   1024 │        15 │        16 │        37 │       1 │    13 │       6 │       775143 │  3168257 │    59 │       25133 │  202753 │ 141.8750 KB │
-% │      112 │    21 │   8192 │        15 │        16 │        37 │       1 │    16 │       6 │      2698381 │ 10872833 │    99 │      120108 │  962561 │ 159.3750 KB │
-% │      112 │    21 │ 131072 │        15 │        16 │        37 │       1 │    13 │       7 │      8803786 │ 35301377 │   199 │      970665 │ 7790593 │ 186.8125 KB │
-% │      112 │    24 │   1024 │        15 │        16 │        37 │       1 │    13 │       6 │       775143 │  3168257 │    59 │       25202 │  202753 │ 159.8750 KB │
-% │      112 │    24 │   8192 │        15 │        16 │        37 │       1 │    16 │       6 │      2698381 │ 10872833 │    99 │      120438 │  964609 │ 179.6250 KB │
-% │      112 │    24 │ 131072 │        15 │        16 │        37 │       1 │    13 │       7 │      8803786 │ 35301377 │   199 │      973331 │ 7790593 │ 210.4375 KB │
-% │      112 │    26 │   1024 │        15 │        16 │        37 │       1 │    13 │       6 │       775143 │  3168257 │    59 │       25243 │  202753 │ 171.8750 KB │
-% │      112 │    26 │   8192 │        15 │        16 │        37 │       1 │    16 │       6 │      2698381 │ 10872833 │   101 │      123098 │  995329 │ 193.1250 KB │
-% │      112 │    26 │ 131072 │        15 │        16 │        37 │       1 │    13 │       7 │      8803786 │ 35301377 │   199 │      974934 │ 7806977 │ 226.1875 KB │
-% │      128 │    21 │   1024 │        15 │        19 │        44 │       1 │     9 │       7 │       698123 │  2856961 │    63 │       29276 │  249857 │ 143.1875 KB │
-% │      128 │    21 │   8192 │        15 │        19 │        44 │       1 │     8 │       8 │      1761048 │  7114753 │    25 │       32252 │  270337 │ 189.0000 KB │
-% │      128 │    21 │ 131072 │        15 │        19 │        44 │       1 │     9 │       8 │      7924716 │ 31776769 │    35 │      182757 │ 1492993 │ 223.3750 KB │
-% │      128 │    24 │   1024 │        15 │        19 │        44 │       1 │     9 │       7 │       698123 │  2856961 │    63 │       29357 │  249857 │ 161.1875 KB │
-% │      128 │    24 │   8192 │        15 │        19 │        44 │       1 │     8 │       8 │      1761048 │  7114753 │    25 │       32339 │  270337 │ 213.0000 KB │
-% │      128 │    24 │ 131072 │        15 │        19 │        44 │       1 │     9 │       8 │      7924716 │ 31776769 │    35 │      183255 │ 1492993 │ 251.8750 KB │
-% │      128 │    26 │   1024 │        15 │        19 │        44 │       1 │     9 │       7 │       698123 │  2856961 │    63 │       29405 │  249857 │ 173.1875 KB │
-% │      128 │    26 │   8192 │        15 │        19 │        44 │       1 │     8 │       8 │      1761048 │  7114753 │    25 │       32392 │  270337 │ 229.0000 KB │
-% │      128 │    26 │ 131072 │        15 │        19 │        44 │       1 │     9 │       8 │      7924716 │ 31776769 │    35 │      183554 │ 1492993 │ 270.8750 KB │
-% └──────────┴───────┴────────┴───────────┴───────────┴───────────┴─────────┴───────┴─────────┴──────────────┴──────────┴───────┴─────────────┴─────────┴─────────────┘
-
-\begin{table}\centering
-  \begin{tabular}{|c|c|r||c|c||c|c|r|r||c||r|r||c|}\hline
-
-    \multicolumn{3}{|c||}{Parameter Sets}  
-    & \multirow{2}{*}{$\alpha_w$}  
-    & \multirow{2}{*}{$\alpha_H$}   &  \multicolumn{4}{c||}{KOTS Param}  
-    & \multirow{2}{*}{$\eta$}       & \multicolumn{2}{c||}{HVC Param}  
-    &  {\bf Sig. Size}\\\cline{1-3}\cline{6-9}\cline{11-12}
-    
-    $\lambda$      & $\tau$
-    & $\rho\quad$&   && $\phi$ 
-    & $\gamma$                      & $\beta_\sigma\quad$     
-    & $q'\quad$                     &        
-    & $\beta\quad$                  & $q\quad$ 
-    & (Kilobytes) \\\hline\hline
-
-
-    % &       &        &            &  &  \multicolumn{4}{c||}{HVC}  &  & \multicolumn{2}{c||}{KOTS}  & (Kilobytes) \\\hline\hline
-    &       &   1024 &         16 &        37 &         13 &       6 &        775,143 &  3,168,257 &    59 &       25,133 &   202,753 & 142 \\\cline{3-13}
-    &    21 &   8192 &         16 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    99 &      120,108 &   962,561 & 160 \\\cline{3-13}
-    &       & 131072 &         16 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &   199 &      970,665 & 7,790,593 & 187 \\\cline{2-13}
-
-    &       &   1024 &         16 &        37 &         13 &       6 &        775,143 &  3,168,257 &    59 &       25,202 &   202,753 & 160 \\\cline{3-13}
-112 &    24 &   8192 &         16 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    99 &      120,438 &   964,609 & 180 \\\cline{3-13}
-    &       & 131072 &         16 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &   199 &      973,331 & 7,790,593 & 211 \\\cline{2-13}
-
-    &       &   1024 &         16 &        37 &         13 &       6 &        775,143 &  3,168,257 &    59 &       25,243 &   202,753 & 172 \\\cline{3-13}
-    &    26 &   8192 &         16 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &   101 &      123,098 &   995,329 & 194 \\\cline{3-13}
-    &       & 131072 &         16 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &   199 &      974,934 & 7,806,977 & 227 \\\hline\hline
-
-    &       &   1024 &         19 &        44 &          9 &       7 &        698,123 &  2,856,961 &    63 &       29,276 &   249,857 & 144 \\\cline{3-13}
-    &    21 &   8192 &         19 &        44 &          8 &       8 &      1,761,048 &  7,114,753 &    25 &       32,252 &   270,337 & 189 \\\cline{3-13}
-    &       & 131072 &         19 &        44 &          9 &       8 &      7,924,716 & 31,776,769 &    35 &      182,757 & 1,492,993 & 224 \\\cline{2-13}
-
-    &       &   1024 &         19 &        44 &          9 &       7 &        698,123 &  2,856,961 &    63 &       29,357 &   249,857 & 162 \\\cline{3-13}
-128 &    24 &   8192 &         19 &        44 &          8 &       8 &      1,761,048 &  7,114,753 &    25 &       32,339 &   270,337 & 213 \\\cline{3-13}
-    &       & 131072 &         19 &        44 &          9 &       8 &      7,924,716 & 31,776,769 &    35 &      183,255 & 1,492,993 & 252 \\\cline{2-13}
-
-    &       &   1024 &         19 &        44 &          9 &       7 &        698,123 &  2,856,961 &    63 &       29,405 &   249,857 & 174 \\\cline{3-13}
-    &    26 &   8192 &         19 &        44 &          8 &       8 &      1,761,048 &  7,114,753 &    25 &       32,392 &   270,337 & 229 \\\cline{3-13}
-    &       & 131072 &         19 &        44 &          9 &       8 &      7,924,716 & 31,776,769 &    35 &      183,554 & 1,492,993 & 271 \\\hline
-  \end{tabular}\label{tab:param}
-  \caption{Parameter sets for Chipmunk}
-\end{table}
-
-The exact constraints to derive the parameters is summarized in Table \ref{tab:constraints}.
-Table \ref{tab:param} summarizes the results from the script. 
+The constraints to derive the parameters are summarized in Table \ref{tab:constraints}.
 We ran a script \footnote{\label{fn:github}\url{https://anonymous.4open.science/r/chipmunk-code-56E6}}
 that enumerates all possible 
 parameters, in terms of the modulus of the rings, the arity of decomposition, etc., and finds the parameter sets that
-allow for smallest signature size.
+allow for smallest signature size. Table \ref{tab:param} summarizes the results from the script. 
+\begin{table}
+  \centering
+  \begin{tabular}{@{\makebox[3em][r]{\rownumber\space}} l@{\hspace{3em}}rl}
+  \toprule
+   \multicolumn{1}{@{\makebox[3em][r]{\#\space}} c}{Source}&\multicolumn{2}{c}{Constraint}\\
+  \midrule
+   \autoref{lem:kots_correct}& $\beta_\sigma \geq$&$ 4\varphi\alpha_H\sqrt{\tfrac{1}{2}\alpha_w\rho(\varepsilon+1+\log_2n\gamma)\cdot\ln2}$\\
+   \autoref{lem:keyhidden}& $\gamma\geq$&$((3\secpar+\delta)/n+\log_2q)\log^{-1}_2(\varphi+\tfrac{1}{2})$\\
+   \autoref{lem:keyhidden}& $\abs{\tern_{\alpha_H}} \leq$&$ 2^{2\secpar + \delta}$\\
+   \autoref{lem:nilssupportivechildsupport}&$q>$&$ 16 \alpha_w \alpha_H\varphi$\\
+   \autoref{lem:kots_sis}&$\abs{\tern_{\alpha_H}} \geq$&$ 2^{2\secpar}$\\
+   \autoref{lem:hvcprobhom}&$\bagg \geq$&$ \eta\sqrt{2\alpha_w\rho(\epsilon + 1 + \log_2 n + \log_2(2\tau \lceil\log_{2\eta+1}q\rceil + \xi\lceil\log_{2\eta+1}q'\rceil))\cdot\ln2}$
+  %\bottomrule
+  \end{tabular}
+  \caption{The constraints a set of Chipmunk parameters needs to satisfy.}\label{tab:constraints}
+\end{table}
+  
 
-We require the ring-SIS problem in Lemma \ref{lem:hvcprobhom} and \ref{lem:kots_correct} are hard. 
+We require the ring-SIS problem in Lemma \ref{lem:hvcprobhom} and \ref{lem:kots_correct} to be hard. 
 We also require that the hamming weights of the message hashes and the randomizers are sufficient for combinatorial security.
 In terms of the lattice security, we use a same approach to derive the security of the parameters as in Squirrel \cite{CCS:FleSimZha22}.
 We adopted the so-called ``realistic model'' in \cite{DBLP:conf/uss/AlkimDPS16}.
@@ -106,7 +53,7 @@ aggregated signature size is reduced by 5 times.
 
 \begin{table}\centering
   \begin{tabular}{|c||l|c|c|c||c|c|c|c||c|c|c|}\hline
-    \# signers      &                 & Falcon      & Squirrel$^{*}$  & Chipmunk$^{*}$  & Imp. Falcon & Imp. Squirrel \\\hline\hline
+    \# signers      &                 & Falcon      & Squirrel  & Chipmunk  & Imp. Falcon & Imp. Squirrel \\\hline\hline
     \multirow{2}{*}{} 
                     & Key Generation  & 8.6 ms      & 4 min     & 26.5 sec  &     -       & 9.0$\times$ \\\cline{2-7}
                     & Signing         & 0.17 ms     & 2.1 ms    & 0.4 ms    &     -       & 5.2$\times$ \\\cline{2-7}
@@ -123,8 +70,10 @@ aggregated signature size is reduced by 5 times.
                                       & 294 ms      & 53  ms    &  47 ms    & 6.2$\times$ & 1.1$\times$ \\\cline{2-7}
                     &Agg. Sig. size   & 5.5 MB      & 762 KB    & 160 KB    & 340$\times$ & 4.8$\times$ \\\hline
   \end{tabular}\\
-  $^{*}$: Using parameters $\lambda = 112$ and $\tau=21$.
+  Falcon: trivial solution via concatenating ``\# signers''  signatures.\\
+  Squirrel and Chipmunk: uses parameters $\lambda = 112$ and $\tau=21$. \\
   \caption{Comparisons among different solutions.}
+
 \end{table}
 
 \subsubsection{Practical performance}
@@ -135,12 +84,13 @@ We conduct a benchmark over a typical server that is equipped with an AMD 7773x 
 64 cores and 1 Terabytes of memory.
 The results are summarized in Table \ref{tab:bench_results}.
 Notice that this platform is different from that of Section \ref{ss:comparison},
-and more accurately simulates the practical node runners for blockchains.
+and more accurately simulates the real world node runners for blockchains.
 
 \begin{table}[t]\centering
   \begin{tabular}{|c|c|c|c|c|c|c|c|c||c|c|c|}\hline
-      Tree Height         & Key Generation            & Online Signing            & $\#$ Signers  
-                                                                                            &  Aggregation & Verification  & Sig. Size  \\ \hline\hline
+      Tree Height         & Key Generation            & Online Signing\footnotemark        
+      & $\#$ Signers  
+                                                                                            &  Aggregation & Verification  & Agg. Sig. Size  \\ \hline\hline
       \multirow{2}{*}{21} & \multirow{2}{*}{7.4 sec}  & \multirow{2}{*}{0.40 ms}  & 1024    &   491 ms     &  7.3 ms       & 142 KB     \\\cline{4-7}
                           &                           &                           & 8192    &   3.5 sec    &  42.3 ms      & 160 KB     \\\hline\hline
 
@@ -154,7 +104,11 @@ and more accurately simulates the practical node runners for blockchains.
   \caption{Benchmark results}
   \label{tab:bench_results}
 \end{table}
-
+\footnotetext{Similar to \cite{CCS:FleSimZha22}, Chipmunk is also an online-offline signature scheme.
+The secret key contains of a merkle tree.
+Via caching the top layers of the tree, the signer trades the storage with signing speed.  
+Here we report the online signing cost assuming the signer stores the full tree.
+} 
 % \end{table}
 % \subsection{Micro Benchmarks}
 We measure the time to generate the keys. As we shall see in Figure \ref{fig:keygen}, the key generation time scales linearly in the 
@@ -184,7 +138,8 @@ In terms of the signature size, for the parameter set with $\tau=21$ and $\rho=1
 an aggregated signature is of size 142 Kilobytes, consists of 
 \begin{itemize}
   \item the aggregated path to the root and its adjacent nodes, i.e., $2\tau\lceil\log(q, \eta)\rceil$ polynomials in $\mathcal{R}_q$ with an infinity norm bound $\beta <2^{15}$. This adds up to $126$ Kilobytes.
-  \item the aggregated one time signature, i.e., $2\gamma$ polynomials in $\mathcal{R}_{q'}$ with norm bound $\beta_\sigma < 2^{20}$, or $16$ Kilobytes.
+  \item the aggregation of decomposed public keys for the one time signature scheme, i.e., $2\lceil\log(q', \eta)\rceil$ polynomials in $\mathcal{R}_{q}$ with norm bound $\beta < 2^{15}$, or $8$ Kilobytes 
+  \item the aggregated one time signature, i.e., $\gamma$ polynomials in $\mathcal{R}_{q'}$ with norm bound $\beta_\sigma < 2^{20}$, or $8$ Kilobytes.
 \end{itemize}
 This almost fits inside a single ethereum block whose peak size is around 130 Kilobytes to date\footnote{\url{https://etherscan.io/chart/blocksize}}.
 
